--- a/_c8oProject/mobilePages/FlowViewer.yaml
+++ b/_c8oProject/mobilePages/FlowViewer.yaml
@@ -347,13 +347,14 @@ scriptContent:
                     return this;
                 },
                 updateBox: function() {
-        //          console.log("****This is the time")
+                  console.log("****This is the time")
                   // Set the position and dimension of the box so that it covers the JointJS element.
                   var bbox = this.model.getBBox();
                   // Example of updating the HTML with a data stored in the cell model.
                   this.$box.find(''label'').text(this.model.get(''label''));
         //          this.$box.find(''span'').text(this.model.get(''select''));
-        //		console.log(''bbox:'' + JSON.stringify(bbox))
+        		console.log(''bbox:'' + JSON.stringify(bbox))
+        
                   this.$box.css({
                       width: bbox.width,
                       height: bbox.height,
@@ -1145,7 +1146,7 @@ scriptContent:
         		
         		this.paper.on(''element:contextmenu'', (cellView, event, x, y) => {
         			var element = this.makePropertiesPanel(cellView.model.attributes.displayName, cellView.model.attributes.properties)
-        			element.position(cellView.model.attributes.position.x + 40, cellView.model.attributes.position.y)
+        			element.position(cellView.model.attributes.position.x + 40, 70)
         			event.preventDefault()
         		})
         
