--- a/_c8oProject/mobilePages/FlowViewer.yaml
+++ b/_c8oProject/mobilePages/FlowViewer.yaml
@@ -1557,6 +1557,7 @@ scriptContent:
         					
         					var clonedElements = [];
         					var elements = this.graph.getElements();
+        // 					var links = this.graph.getLinks();
         					var tmpTab = [];
         					_.each(elements, (element) => {
         						if(element.attributes.isIteratorBox) {
@@ -1566,6 +1567,10 @@ scriptContent:
         						}
         						
         					})
+        					
+        //					_.each(links, (link) => {
+        //						clonedElements.push(link.clone())
+        //					})
         //					_.each(elements, (element) => {
         //						if(element.attributes.isIteratorBox) {
         //							clonedElements.push(element.clone())
@@ -2096,78 +2101,42 @@ title: Title for FlowViewer
                         //		this.graph.fromJSON(vars.cardObject.copiedGraph)
                         		var clonedElements = [];
                         		var elements = vars.graph.getElements();
+                        // 		var links = vars.graph.getLinks();
                         		var tmpTabObj = {
                         			subElements: []
                         		};
-                        		var isInTmpTabObj = false;
                         		_.each(elements, (element) => {
                         			if(element.attributes.isIteratorBox) {
-                        				clonedElements.push(element.clone({deep: true}))
-                        				tmpTabObj.subElements = element.clone({deep:true})
+                        				// clonedElements.push(element.clone({deep:true})) // cloning the box
+                        				// tmpTabObj.subElements = element.clone({deep:true}) // cloning the box and its content
+                        				if(tmpTabObj.subElements.length == 0) {
+                        					tmpTabObj.subElements = element.clone({deep:true})
+                        					_.each(tmpTabObj.subElements, (subEl) => { clonedElements.push(subEl) });
+                        				}
+                        
+                        				if(tmpTabObj.subElements.length > 0) {
+                        					if(!tmpTabObj.subElements.filter(e => e.attributes.properties == element.attributes.properties)) {
+                        						clonedElements.push(element.clone({deep:true}));
+                        						console.log("is not contains")
+                        					}
+                        				}
                         			} else if(element.attributes.isInIterator) { // si mon élement est dans un iterator
                         				var elementPriority = this.getPriority(element.attributes.properties)
                         				if(tmpTabObj.subElements != undefined && tmpTabObj.subElements.length > 0) { // je regarde si le tab tmpo est rempli de sub element d''un iterator
-                        					
-                        					if(tmpTabObj.subElements.filter(e => e.attributes.properties === element.attributes.properties))
-                        						console.log("it contains")
-                        //					_.each(tmpTabObj.subElements, (subElement) => { // pour chaque element 
-                        //						var subElementPriority = (subElement.attributes.properties != undefined) ? this.getPriority(subElement.attributes.properties) : undefined
-                        //						if(subElement.attributes.properties != undefined) {
-                        ////							var i = _.findIndex(subElement.attributes.properties[subElement.attributes.properties.length -1], element.attributes.properties[element.attributes.properties.length -1])
-                        //							if(subElement.attributes.properties[subElement.attributes.properties.length -1][''value''] == element.attributes.properties[element.attributes.properties.length -1][''value'']) {
-                        //								isInTmpTabObj = true
-                        //							}
-                        //								
-                        //						}
-                        //						
-                        ////						if(elementPriority != subElementPriority) {
-                        ////							clonedElements.push(element.clone())
-                        ////						}
-                        ////						if(_.findIndex(subElement.attributes.properties[subElement.attributes.properties.length -1], element.attributes.properties[element.attributes.properties.length -1]) != -1)
-                        ////							clonedElements.push(element.clone())
-                        ////						if(!_.isEqual(subElement, element)) { // je regarde si mon current element n''y est pas et je le rajoute
-                        ////							clonedElements.push(element.clone())
-                        ////						}
-                        //					})
-                        					
-                        					if(!isInTmpTabObj)
+                        					if(!tmpTabObj.subElements.filter(e => e.attributes.properties == element.attributes.properties)) {
                         						clonedElements.push(element.clone())
-                        					
+                        						console.log("is not contains")
+                        					}					
                         				}
                         			} else {
                         				clonedElements.push(element.clone())
                         			}				
                         		})
-                        //		_.each(elements, (element) => {
-                        //						if(element.attributes.isIteratorBox) {
-                        //							clonedElements.push(element.clone())
-                        //						}
-                        //						else {
-                        //							if(Array.isArray(element) && tmpTab != undefined && tmpTab.length == 0 ) {
-                        //								tmpTab = element
-                        //							} else {
-                        //								if(tmpTab.length != 0) {
-                        //									_.each(tmpTab, (el) => {
-                        //										if(!_.isEqual(el, element)) {
-                        //											clonedElements.push(element.clone())
-                        //										}	
-                        //									})
-                        //									tmpTab = [];
-                        //								} else {
-                        //									clonedElements.push(element.clone())
-                        //								}
-                        //								// clonedElements.push(element.clone())
-                        //							}
-                        //							
-                        //			
-                        //						}
-                        //										
-                        //				})
                         		
-                        //		var links = vars.graph.getLinks()
                         //		_.each(links, (link) => {
                         //			clonedElements.push(link.clone())
                         //		})
+                        		
                         		
                         		this.updateGraph(this.graph, clonedElements);
                         		this.paper.setOrigin(this.graphOriginX, this.graphOriginY);
